--- a/app/src/main/res/drawable/big_star_selector.xml
+++ b/app/src/main/res/drawable/big_star_selector.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/pingjia_ic_daxing1" android:state_enabled="true" />
-    <item android:drawable="@drawable/pingjia_ic_daxing" android:state_enabled="false" />
+    <item android:drawable="@drawable/pingjia_ic_daxing1" android:state_selected="true" />
+    <item android:drawable="@drawable/pingjia_ic_daxing1" android:state_checked="true" />
+    <item android:drawable="@drawable/pingjia_ic_daxing" />
 </selector>
