--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -69,63 +69,50 @@
         </RelativeLayout>
         <!--已经有收货地址-->
         <RelativeLayout
+            android:id="@+id/rl_address"
             android:layout_width="match_parent"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="15dp">
 
-            <RelativeLayout
-                android:id="@+id/rl_address"
+            <ImageView
+                android:id="@+id/iv_dingwei"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:background="@drawable/meal_ic_dwding" />
+
+            <TextView
+                android:id="@+id/tv_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp">
-
-                <ImageView
-                    android:id="@+id/iv_dingwei"
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/meal_ic_dwding" />
-
-                <TextView
-                    android:id="@+id/tv_address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="11dp"
-                    android:layout_toRightOf="@id/iv_dingwei"
-                    android:text="海天大厦20楼2010室"
-                    android:textColor="@color/text_white"
-                    android:textSize="17sp"
-                    android:textStyle="bold" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
+                android:layout_marginLeft="11dp"
+                android:layout_toRightOf="@id/iv_dingwei"
+                android:text="海天大厦20楼2010室"
+                android:textColor="@color/text_white"
+                android:textSize="17sp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/rl_address"
-                android:layout_marginTop="5dp">
+                android:layout_marginLeft="29dp"
+                android:text="张铭明"
+                android:layout_below="@+id/tv_address"
+                android:textColor="@color/text_white"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="29dp"
-                    android:text="张铭明"
-                    android:textColor="@color/text_white"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="29dp"
-                    android:layout_toRightOf="@id/tv_name"
-                    android:text="159****2586"
-                    android:textColor="@color/text_white"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-            </RelativeLayout>
+            <TextView
+                android:id="@+id/tv_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="29dp"
+                android:layout_below="@+id/tv_address"
+                android:layout_toRightOf="@id/tv_name"
+                android:text="159****2586"
+                android:textColor="@color/text_white"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
             <ImageView
                 style="@style/arrow"
