--- a/app/src/main/res/layout/fragment_all_order.xml
+++ b/app/src/main/res/layout/fragment_all_order.xml
@@ -15,6 +15,8 @@
             android:layout_height="match_parent"
             android:divider="@color/category_color"
             android:dividerHeight="15dp"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
             tools:listitem="@layout/item_order" />
 
         <include layout="@layout/item_empty" />
