--- a/app/src/main/res/layout/activity_shop_home.xml
+++ b/app/src/main/res/layout/activity_shop_home.xml
@@ -176,12 +176,13 @@
                 android:textSize="12sp" />
 
             <ImageView
-                android:layout_width="8dp"
-                android:layout_height="5dp"
+                android:id="@+id/iv_expand_info"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="15dp"
-                android:background="@drawable/common_xiala" />
+                android:padding="20dp"
+                android:src="@drawable/common_xiala" />
         </RelativeLayout>
     </LinearLayout>
 
