--- a/app/src/main/res/layout/activity_evaluation.xml
+++ b/app/src/main/res/layout/activity_evaluation.xml
@@ -128,9 +128,9 @@
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
-                        android:clickable="true"
                         android:layout_marginRight="10dp"
                         android:background="@drawable/selected_satisfaction"
+                        android:clickable="true"
                         android:gravity="center">
 
                         <ImageView
@@ -150,12 +150,13 @@
                     </RelativeLayout>
                 </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/tv_rider_suggest"
+                <EditText
+                    android:id="@+id/ev_rider_suggest"
                     style="@style/base_edit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_evaluation_gray"
+                    android:gravity="left"
                     android:hint="您的建议，会让我们做的更好"
                     android:minHeight="86dp"
                     android:paddingLeft="15dp"
@@ -226,7 +227,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp">
+                    android:layout_marginBottom="15dp"
+                    android:visibility="gone">
 
                     <ImageView
                         android:id="@+id/iv_star1"
@@ -332,14 +334,16 @@
                     android:minHeight="146dp"
                     android:orientation="vertical">
                     <!--评价文字-->
-                    <TextView
-                        android:id="@+id/tv_store_suggest"
+                    <EditText
+                        android:id="@+id/ev_store_suggest"
+                        style="@style/base_edit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:gravity="left"
+                        android:hint="请简单描述您对我们的评价"
                         android:minHeight="77dp"
                         android:padding="15dp"
-                        android:text="请简单描述您对我们的评价"
-                        android:textColor="@color/hint_text_color"
                         android:textSize="15sp" />
                     <!--添加图片-->
                     <LinearLayout
@@ -351,7 +355,8 @@
                             android:id="@+id/ll_image_views"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"/>
+                            android:orientation="horizontal" />
+
                         <TextView
                             android:id="@+id/tv_add_photo"
                             android:layout_width="54dp"
@@ -375,11 +380,12 @@
 
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/ll_goods"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"/>
+                    android:orientation="vertical" />
             </LinearLayout>
             <!--评价-->
             <TextView
