我的购物车接口联调

--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -453,6 +453,7 @@
         android:id="@+id/rl_order"
         android:layout_width="match_parent"
         android:layout_height="49dp"
+        android:layout_marginTop="15dp"
         android:layout_alignParentBottom="true"
         android:background="@color/bg_white">
 
