--- a/app/src/main/res/layout/item_commodity.xml
+++ b/app/src/main/res/layout/item_commodity.xml
@@ -6,7 +6,7 @@
     android:paddingTop="15dp"
     android:paddingRight="15dp">
 
-    <ImageView
+    <com.baba.GlideImageView
         android:id="@+id/iv_avatar"
         android:layout_width="44dp"
         android:layout_height="44dp"
@@ -31,7 +31,7 @@
         android:layout_toRightOf="@id/iv_avatar">
 
         <TextView
-
+            android:id="@+id/tv_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -40,6 +40,7 @@
             android:textSize="14sp" />
 
         <TextView
+            android:id="@+id/tv_money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
