--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:background="@color/bg_white"
+        android:visibility="gone"
         android:paddingLeft="15dp">
         <!--选择地址-->
         <RelativeLayout
