--- a/app/src/main/res/layout/fragment_all_order.xml
+++ b/app/src/main/res/layout/fragment_all_order.xml
@@ -4,7 +4,10 @@
     android:layout_height="match_parent"
     android:background="@color/category_color"
     android:orientation="vertical">
-
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/layout_swipe_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -22,4 +25,5 @@
         <include layout="@layout/item_empty" />
 
     </RelativeLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
