--- a/app/src/main/res/layout/item_product_name.xml
+++ b/app/src/main/res/layout/item_product_name.xml
@@ -41,6 +41,7 @@
             android:textSize="11sp" />
 
         <TextView
+            android:id="@+id/tv_sell_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
