--- a/app/src/main/res/layout/item_my_address.xml
+++ b/app/src/main/res/layout/item_my_address.xml
@@ -5,76 +5,73 @@
     android:background="@color/white"
     android:minHeight="71dp">
 
+
+    <RelativeLayout
+        android:id="@+id/rl_address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="63dp"
+        android:layout_marginTop="15dp">
+
+        <TextView
+            android:id="@+id/tv_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="新港中路"
+            android:textColor="@color/black"
+            android:textSize="17sp" />
+
+        <TextView
+            android:id="@+id/tv_house_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:paddingRight="63dp"
+            android:layout_toRightOf="@id/tv_address"
+            android:text="新港中路357六楼客村地..."
+            android:textColor="@color/black"
+            android:textSize="17sp" />
+    </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rl_address"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="15dp">
 
-        <RelativeLayout
-            android:id="@+id/rl_address"
+        <TextView
+            android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp">
+            android:text="张铭明"
+            android:textColor="@color/navigation_color"
+            android:textSize="15sp" />
 
-            <TextView
-                android:id="@+id/tv_address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="新港中路"
-                android:textColor="@color/black"
-                android:textSize="17sp" />
-
-            <TextView
-                android:id="@+id/tv_house_number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="100dp"
-                android:layout_toRightOf="@id/tv_address"
-                android:singleLine="true"
-                android:text="新港中路357六楼客村地..."
-                android:textColor="@color/black"
-                android:textSize="17sp" />
-        </RelativeLayout>
-
-        <RelativeLayout
+        <TextView
+            android:id="@+id/tv_gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/rl_address"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp">
+            android:layout_marginLeft="23dp"
+            android:layout_marginRight="27dp"
+            android:layout_toRightOf="@id/tv_name"
+            android:text="先生"
+            android:textColor="@color/navigation_color"
+            android:textSize="15sp" />
 
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="张铭明"
-                android:textColor="@color/navigation_color"
-                android:textSize="15sp" />
-
-            <TextView
-                android:id="@+id/tv_gender"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="23dp"
-                android:layout_marginRight="27dp"
-                android:layout_toRightOf="@id/tv_name"
-                android:text="先生"
-                android:textColor="@color/navigation_color"
-                android:textSize="15sp" />
-
-            <TextView
-                android:id="@+id/tv_phone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/tv_gender"
-                android:text="15925245688"
-                android:textColor="@color/navigation_color"
-                android:textSize="15sp" />
-        </RelativeLayout>
-
+        <TextView
+            android:id="@+id/tv_phone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/tv_gender"
+            android:text="15925245688"
+            android:textColor="@color/navigation_color"
+            android:textSize="15sp" />
     </RelativeLayout>
+
 
     <ImageView
         android:id="@+id/edit"
